[package]
name = "rust_exercise"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_exercise"
crate-type = ["cdylib", "rlib"]

[features]
python = ["pyo3/extension-module"]
nodejs = ["wasm-bindgen", "serde/derive", "tsify", "strum/derive"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = {version = "0.18.3", optional = true}
serde = {version = "1.0.163", optional = true}
strum = {version = "0.24.1", optional = true}
tsify = {version="0.4.5", optional = true}
wasm-bindgen = {version = "0.2.86", optional = true}
